docs: update md

--- a/src/components/Progress/index.less
+++ b/src/components/Progress/index.less
@@ -64,7 +64,8 @@
             position: absolute;
             left: 50%;
             top: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%
+            );
             // fill: $font-color;
             // font-size: $font-size-lg;
             // font-weight: $font-weight-base;
