--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -14,3 +14,4 @@
 @import '../components/Row/index.less';
 @import '../components/Col/index.less';
 @import '../components/List/index.less';
+@import '../components/Upload/index.less';
