--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -15,3 +15,4 @@
 @import '../components/Col/index.less';
 @import '../components/List/index.less';
 @import '../components/Upload/index.less';
+@import '../components/Popover/index.less';
